Layout realmente finalizado

--- a/index.html
+++ b/index.html
@@ -18,14 +18,10 @@
             <ion-icon class="menu" name="people"></ion-icon>
         </div>
         <div class="container-conversa"></div>
+        </div>
         <div class="container-msg">
-            <form action="POST" class="msg">
-                <textarea name="msg" id="msg-txt" cols="30" rows="1" placeholder="Escreva aqui"></textarea>
-            </form>
-
-            <button class="submit" type="submit">
-                <ion-icon name="paper-plane-outline"></ion-icon>
-            </button>
+            <textarea name="msg" id="msg-txt" form="msg" cols="30" rows="1" placeholder="Escreva aqui"></textarea>
+            <ion-icon name="paper-plane-outline"></ion-icon>
         </div>
     </div>
 
