--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <div class="logo"></div>
             <ion-icon class="menu" name="people"></ion-icon>
         </div>
-        <div class="container-conversa"></div>
+        <div class="container-conversa">
+            <div class="msg"></div>
+        </div>
         </div>
         <div class="container-msg">
-            <textarea name="msg" id="msg-txt" form="msg" cols="30" rows="1" placeholder="Escreva aqui"></textarea>
+            <textarea name="msg" id="msg-txt" cols="30" rows="1" placeholder="Escreva aqui"></textarea>
             <ion-icon name="paper-plane-outline"></ion-icon>
         </div>
     </div>
